v.1.6
 - Initial Ubuntu 20.04 (Focal) support
 - Change theme in real time when set to system theme

v.1.5
 - Update French translations (Thanks Anne017)
 - Updated web version URL
 - Fixed #10: Cannot delete comment by editing
 - Fixed #14: Date in the filter dialog does not update correctly
 - Add a way to view the most recent data
 - Disable header expansion behavior when app is not tall enough

v.1.4
 - Added "Weight"
 - Set date of new entry based on the date of the current page
 - Added webapp URL in About page
 - Add ability to delete values inputted at the same time or with exactly the same entry date
 - Add ability to update entry date
 - Minor layout changes

v.1.3
 - French and Dutch translations (Thanks to Anne017 and Vistaus!)
 - Add haptic feedback in the date picker
 - Add user metric for displaying most recent values for the current day
 - Implmented ability to add multiple values from the data navigation page similar to the dashboard
 - Improved scrolling fields to view when focused
 - Add option to view all values
 - Cleaner look for the list
 
 - Top margin in the summary field when not expandable
 - Code cleanup

v1.2
 - Fix new time picker not working properly
 - Fix adding comments when editing without one
 - Layout changes in the date picker
 - Add proper horizontal swiping in data navigation page
 - Add Date selection in data navigation page
 - Other minor fixes and code refactoring

v1.1
 - Fix automatic refreshing of dashboard when day changed
 - New date and time picker.  Thanks to Michael Zanetti for sharing these from the awesome Nymea app
 - Exclude current date in recent daily average calculation

v1.0
 - First release in the OpenStore